--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon serverWithGraphiQl.js"
   },
   "author": "Mohimenol-Islam-Munna",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.2",
+    "express-graphql": "^0.12.0",
     "graphql": "^16.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
