--- a/Basic/package.json
+++ b/Basic/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "apollo-client": "nodemon index.js",
     "dev": "nodemon serverWithGraphiQl.js"
   },
   "author": "Mohimenol-Islam-Munna",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^3.6.3",
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.3.0"
