--- a/next_apollo_client_graphql/package.json
+++ b/next_apollo_client_graphql/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.9",
+    "axios": "^0.26.0",
+    "graphql": "^16.3.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
