--- a/next_apollo_client_graphql/package.json
+++ b/next_apollo_client_graphql/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.9",
     "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
     "graphql": "^16.3.0",
     "next": "12.1.0",
     "react": "17.0.2",
