apollo server express graphql

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Basic/node_modules
 next_apollo_client_graphql/node_modules
 react_apollo_client_graphql/node_modules
 express_js_graphql/node_modules
+graphql_express_apollo_server/node_modules
