--- a/graphql_express_apollo_server/package.json
+++ b/graphql_express_apollo_server/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "apollo-server-core": "^3.10.1",
     "apollo-server-express": "^3.10.1",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "graphql": "^16.5.0"
+    "graphql": "^16.5.0",
+    "mongoose": "^6.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
